[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/Ship.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ship.gd" type="Script" id=2]
[ext_resource path="res://prefabs/BouletCanon.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Inventory.gd" type="Script" id=4]
[ext_resource path="res://prefabs/Explosion.tscn" type="PackedScene" id=5]

[node name="Ship" type="KinematicBody2D" groups=[
"Player",
"Ship",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
rotate_speed = 0.01
BouletCanon = ExtResource( 3 )
inventory_path = NodePath("Inventory")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -2.3125, -12.4062, 2.375, -12.4062, 7.53125, -7.40625, 7.40625, 12.5312, -7.4375, 12.5312, -7.5, -7.4375 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 4 )
player_node_path = NodePath("..")

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.6
drag_margin_top = 0.6
drag_margin_right = 0.6
drag_margin_bottom = 0.6

[node name="CanonsR" type="Node2D" parent="."]
position = Vector2( 7, 0 )

[node name="Canon1" type="Position2D" parent="CanonsR"]
position = Vector2( 0, -3 )

[node name="Canon2" type="Position2D" parent="CanonsR"]
position = Vector2( 0, 3 )

[node name="Canon3" type="Position2D" parent="CanonsR"]
position = Vector2( 0, 9 )

[node name="CanonsL" type="Node2D" parent="."]
position = Vector2( -7, 0 )

[node name="Canon1" type="Position2D" parent="CanonsL"]
position = Vector2( 0, -3 )

[node name="Canon2" type="Position2D" parent="CanonsL"]
position = Vector2( 0, 3 )

[node name="Canon3" type="Position2D" parent="CanonsL"]
position = Vector2( 0, 9 )

[node name="CanShootTimerR" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanShootTimerL" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Explosion" parent="." instance=ExtResource( 5 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -3.38172, -12.8861, 3.23715, -13.0011, 8.47318, -7.53466, 8.28737, 13.3508, -8.32791, 13.4534, -8.46838, -7.71015 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="timeout" from="CanShootTimerR" to="." method="_on_CanShootTimerR_timeout"]
[connection signal="timeout" from="CanShootTimerL" to="." method="_on_CanShootTimerL_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
